# cachelm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cachelm/: main.py
cachelm/src/adaptors/: adaptor.py  openai.py
cachelm/src/databases/: chroma.py  database.py  redis.py
cachelm/src/embedders/: embedder.py  fastembed.py
cachelm/src/vectorizers/: chroma.py  fastembed.py  redisvl.py  vectorizer.py
cachelm/tests/: test_openai.py
examples/: example_chroma.py  example_clickhouse.py  example_openai.py  example_redis.py
src/cachelm/adaptors/: adaptor.py  openai.py
src/cachelm/databases/: chroma.py  clickhouse.py  database.py  redis.py
src/cachelm/middlewares/: deduper.py  middleware.py  replacer.py
src/cachelm/types/: chat_history.py
src/cachelm/vectorizers/: chroma.py  fastembed.py  redisvl.py
